# obstudio

./: .gitignore  .goreleaser.yaml  .review-loop.js  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.json
demo/python-flask-basic/: Makefile  app.py  pyproject.toml
evals/: Makefile  README.md  codex-evals.ab.toml  codex-evals.baseline.toml  codex-evals.toml  codex-evals.validation.toml  conftest.py  promptfoo.yaml  pyproject.toml  test_dashboard_skill_guidance.py  test_genai_skill_guidance.py  test_golden.py  test_incident_readiness_skill_guidance.py  test_llm.py  test_splunk_configure_signalflow_guidance.py  test_structural.py  trigger-tests.yaml
evals/dashboards/checkout-configure/: otel-report.md
evals/dashboards/checkout-detectors/: detectors.tf.seed  terraform.tfvars.seed  variables.tf.seed
evals/dashboards/checkout-sync/: dashboards.tf.seed  terraform.tfvars.seed  variables.tf.seed
evals/deployment/app-only/service/: app.js
evals/deployment/dependency-config/.observe/: otel.md
evals/deployment/dependency-config/chart/: Chart.yaml  values.yaml
evals/deployment/dependency-config/gitops/: application.yaml
evals/deployment/dependency-config/service/: app.js  package.json
evals/deployment/dependency-config/terraform/: main.tf
evals/deployment/multi-repo/.observe/: otel.md
evals/deployment/multi-repo/chart/: Chart.yaml  values.yaml
evals/deployment/multi-repo/gitops/: application.yaml
evals/deployment/multi-repo/service/: app.js  package.json
evals/deployment/multi-repo/terraform/: main.tf
evals/deployment/referenced-values/.observe/: otel.md
evals/deployment/referenced-values/chart/: Chart.yaml  values.yaml
evals/deployment/referenced-values/gitops/: application.yaml
evals/deployment/referenced-values/service/: app.js  package.json
evals/deployment/referenced-values/terraform/: main.tf
evals/go/chi-basic/: audit_eval.json  go.mod  instrument_eval.json
evals/go/chi-partial/: audit_eval.json  go.mod  instrument_eval.json  main.go
evals/go/kvstore/: audit_eval.json  go.mod  instrument_eval.json
evals/go/kvstore/kvstore/: http.go  store_test.go
evals/golden/go-chi-basic/: inventory.md
evals/golden/go/chi-basic/: inventory.md
evals/golden/go/kvstore/: inventory.md
evals/golden/node-express-basic/: inventory.md
evals/golden/node/express-basic/: inventory.md
evals/golden/python-flask-basic/: inventory.md
evals/golden/python/flask-basic/: inventory.md
evals/java/kafka-batch-consumer/: README.md  pom.xml
evals/java/kafka-listener-container/: README.md  pom.xml
evals/java/kafka-producer-consumer/: README.md  pom.xml
evals/java/kafka-streams/: README.md  pom.xml
evals/java/springboot-basic/: audit_eval.json  instrument_eval.json
evals/node/express-basic/: audit_eval.json  instrument_eval.json
evals/python/ai-assistant-demo/: Makefile  app.py
evals/python/assistant-v3-framework-bridge-demo/: Makefile  README.md  app.py  pyproject.toml
evals/python/fastapi-celery/: Dockerfile  audit_eval.json  docker-compose.yml  instrument_eval.json  instrument_runtime_eval.json
evals/python/flask-basic/: audit_eval.json  audit_sanity_eval.json  instrument_eval.json  instrument_sanity_eval.json
evals/python/mcp-ai-tool-demo/: README.md  load_demo.py
evals/runtime/: observer.Dockerfile  traffic.Dockerfile
evals/sanity/skill-smoke/: service.txt
evals/scripts/: check_semconv.py  check_structural.py  run_golden_compare.py  test_emission.sh
examples/python/flask-basic/: app.py  pyproject.toml
pytest-codex-evals/: Makefile  README.md  pyproject.toml
pytest-codex-evals/src/pytest_codex_evals/: __init__.py  ab.py  backends.py  cli.py  config.py  deterministic.py  discovery.py  eval_files.py  models.py  plugin.py  pr_summary.py  qualitative.py  report.py  runner.py  runtime.py  schema_resources.py  trace.py
pytest-codex-evals/src/pytest_codex_evals/definitions/: __init__.py  base.py  rubric.py  runtime.py  sanity.py
pytest-codex-evals/src/pytest_codex_evals/graders/: __init__.py  rubric.py  runtime.py  sanity.py  shared.py
pytest-codex-evals/src/pytest_codex_evals/reports/: __init__.py  templates.py
pytest-codex-evals/src/pytest_codex_evals/schemas/: common.schema.json  eval.schema.json  rubric.schema.json  (+3 more)
pytest-codex-evals/tests/: test_collection.py  test_core.py  test_pr_summary.py
(+687 files in other folders)
