[project]
name = "obstudio-evals"
version = "0.0.1"
description = "Skill evaluation scripts for obstudio"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pytest>=8.0",
    "deepeval>=2.0",
    "boto3>=1.35",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "trigger: LLM-based trigger/routing tests",
    "golden: LLM-based golden comparison tests",
    "release: comprehensive tests run only at release time",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
