[project]
name = "obstudio-evals"
version = "0.1.0"
description = "Observability Studio Codex eval definitions"
requires-python = ">=3.11"
dependencies = [
  "pytest-codex-evals",
  "pytest>=8.0.0",
]

[tool.uv.sources]
pytest-codex-evals = { path = "../pytest-codex-evals", editable = true }

[tool.pytest.ini_options]
testpaths = ["."]
