[project]
name = "python-assistant-v3-framework-bridge-demo"
version = "0.1.0"
description = "Assistant v3 fixture for GenAI framework bridge collision handling"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "opentelemetry-instrumentation-openai-v2",
    "splunk-otel-instrumentation-langchain",
]
